// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose approval test 1`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 19,
    "sellIn": 9,
  },
  Item {
    "name": "Aged Brie",
    "quality": 1,
    "sellIn": 1,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 6,
    "sellIn": 4,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 21,
    "sellIn": 14,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 9,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 4,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 5,
    "sellIn": 2,
  },
]
`;

exports[`Gilded Rose approval test 2`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 18,
    "sellIn": 8,
  },
  Item {
    "name": "Aged Brie",
    "quality": 2,
    "sellIn": 0,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 5,
    "sellIn": 3,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 22,
    "sellIn": 13,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 8,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 3,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 4,
    "sellIn": 1,
  },
]
`;

exports[`Gilded Rose approval test 3`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 17,
    "sellIn": 7,
  },
  Item {
    "name": "Aged Brie",
    "quality": 4,
    "sellIn": -1,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 4,
    "sellIn": 2,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 23,
    "sellIn": 12,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 7,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 2,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 3,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose approval test 4`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 16,
    "sellIn": 6,
  },
  Item {
    "name": "Aged Brie",
    "quality": 6,
    "sellIn": -2,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 3,
    "sellIn": 1,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 24,
    "sellIn": 11,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 6,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 1,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 1,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose approval test 5`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 15,
    "sellIn": 5,
  },
  Item {
    "name": "Aged Brie",
    "quality": 8,
    "sellIn": -3,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 2,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 25,
    "sellIn": 10,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 0,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose approval test 6`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 14,
    "sellIn": 4,
  },
  Item {
    "name": "Aged Brie",
    "quality": 10,
    "sellIn": -4,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -1,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 27,
    "sellIn": 9,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 4,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -1,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sellIn": -3,
  },
]
`;

exports[`Gilded Rose approval test 7`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 13,
    "sellIn": 3,
  },
  Item {
    "name": "Aged Brie",
    "quality": 12,
    "sellIn": -5,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -2,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 29,
    "sellIn": 8,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 3,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -2,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sellIn": -4,
  },
]
`;

exports[`Gilded Rose approval test 8`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 12,
    "sellIn": 2,
  },
  Item {
    "name": "Aged Brie",
    "quality": 14,
    "sellIn": -6,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -3,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 31,
    "sellIn": 7,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 2,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -3,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sellIn": -5,
  },
]
`;

exports[`Gilded Rose approval test 9`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 11,
    "sellIn": 1,
  },
  Item {
    "name": "Aged Brie",
    "quality": 16,
    "sellIn": -7,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -4,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 33,
    "sellIn": 6,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -4,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sellIn": -6,
  },
]
`;

exports[`Gilded Rose approval test 10`] = `
Array [
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 10,
    "sellIn": 0,
  },
  Item {
    "name": "Aged Brie",
    "quality": 18,
    "sellIn": -8,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -5,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 35,
    "sellIn": 5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -5,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 0,
    "sellIn": -7,
  },
]
`;
